[tool.poetry]
name = "hackernews-wrapper"
version = "0.1.0"
description = ""
authors = ["Yura Kikhaiev <yurakikhaiev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.5"
redis = "^5.0.1"
gunicorn = "^21.2.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
